# django-unique-user-email

./: .gitignore  CHANGELOG.md  LICENSE  README.md  justfile  pyproject.toml
src/unique_user_email/: __init__.py  admin.py  apps.py  backend.py  forms.py  models.py  utils.py
src/unique_user_email/locale/de/LC_MESSAGES/: django.mo  django.po
src/unique_user_email/locale/en/LC_MESSAGES/: django.mo  django.po
src/unique_user_email/locale/es/LC_MESSAGES/: django.mo  django.po
src/unique_user_email/locale/fr/LC_MESSAGES/: django.mo  django.po
src/unique_user_email/locale/it/LC_MESSAGES/: django.mo  django.po
src/unique_user_email/migrations/: 0001_initial.py  0002_add_check_constraint_empty_email.py
tests/: settings.py  tests.py  urls.py
