[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-unique-user-email"
authors = [{name = "Carlton Gibson", email = "carlton.gibson@noumenal.es"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = ["Django>=4.2"]


[project.urls]
Home = "https://noumenal.es/unique_user_email/"



[tool.flit.module]
name = "unique_user_email"
